--- a/University-Management-Final-Project/UniversityManagement/UniversityManagement/Web.config
+++ b/University-Management-Final-Project/UniversityManagement/UniversityManagement/Web.config
@@ -8,15 +8,15 @@
         <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
         <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     </configSections>
+  <connectionStrings>
+    <add name="UniversityDbContext" connectionString="Server = (LocalDB)\UniversityDB;Initial Catalog=UniversityManagement;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
-  <connectionStrings>
-    <add name="UniversityDB" connectionString="Server = (LocalDB)\UniversityDB; Database = UniversityManagement; Integrated Security= true" />
-  </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
@@ -53,7 +53,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-5.2.4.0" newVersion="5.2.4.0" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.4.0" newVersion="5.2.4.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
