--- a/University-Management-Final-Project/UniversityManagement/UniversityManagement/packages.config
+++ b/University-Management-Final-Project/UniversityManagement/UniversityManagement/packages.config
@@ -5,6 +5,7 @@
   <package id="EntityFramework" version="6.4.0" targetFramework="net461" />
   <package id="iTextSharp" version="5.5.13.1" targetFramework="net461" />
   <package id="jQuery" version="3.3.1" targetFramework="net461" />
+  <package id="jQuery.UI" version="1.12.1.1" targetFramework="net461" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.4" targetFramework="net461" />
   <package id="Microsoft.AspNet.Razor" version="3.2.4" targetFramework="net461" />
